kubernetes/main/apps/default/home-assistant/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-external
  labels:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
spec:
  ingressClassName: nginx-external
  rules:
    - host: home.denniseffing.de
      http:
        paths:
          - backend:
              service:
                name: home-assistant
                port:
                  name: http
            pathType: Prefix
            path: /
